# geodoctor

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  action.yml  coverage.lcov  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  coverage.yml  labeler.yml  publish.yml  release.yml  semantic-pr.yml
benchmarks/: benchmark_performance.py
examples/: README.md  basic_check.py  github_action.yml  pre-commit.yaml  sample_buildings.geojson  sample_roads.geojson
examples/sample_data/: sample.geojson
media/: check-output.txt  cli-help.txt
scripts/: release_notes.py
src/geodoctor/: __init__.py  cli.py  config.py  dataset.py  engine.py  registry.py  report.py
src/geodoctor/checks/: __init__.py  crs.py  geometry.py  geometry_helpers.py  schema.py  structure.py  topology.py
src/geodoctor/cli/: __init__.py  commands.py  engine.py  fixes_cmd.py  formatters.py
src/geodoctor/fixes/: __init__.py  geometry.py
src/geodoctor/renderers/: __init__.py  console.py
src/geodoctor/renderers/templates/: report.html
tests/: test_cli.py  test_cli_init.py  test_config.py  test_crs_checks.py  test_engine.py  test_error_paths.py  test_fixes.py  test_geometry_checks.py  test_html_report.py  test_more_fixes.py  test_raises.py  test_registry.py  test_report.py  test_round_trip.py  test_schema_checks.py  test_topology_checks.py
tests/fixtures/: bad_schema.gpkg  generate_fixtures.py  good.gpkg  invalid_geom.geojson  missing_crs.geojson  strict_config.yml
