[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geodoctor"
version = "0.1.0"
description = "Linter for geospatial data — find invalid geometries, broken CRS, schema violations, and topology problems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tabib Hasan"}]
keywords = ["geospatial", "gis", "shapefile", "geopackage", "linter", "validation", "gdal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
    "pyogrio>=0.8",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.9"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
geodoctor = "geodoctor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/geodoctor"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
