[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geodoctor"
version = "0.2.0"
description = "Linter for geospatial data — find invalid geometries, broken CRS, schema violations, and topology problems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tabib Hasan"}]
keywords = ["geospatial", "gis", "shapefile", "geopackage", "linter", "validation", "gdal", "data-quality", "geometry-validation", "crs", "coordinate-reference-system", "topology", "spatial-data", "geojson", "vector-data", "raster", "data-linter", "pre-commit", "ci-cd", "cli", "developer-tools", "data-pipeline", "etl", "qa-qc", "schema-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
    "pyogrio>=0.8",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.9"]

[project.urls]
Homepage = "https://github.com/tabibhasann/geodoctor"
Repository = "https://github.com/tabibhasann/geodoctor"
Issues = "https://github.com/tabibhasann/geodoctor/issues"
Changelog = "https://github.com/tabibhasann/geodoctor/blob/main/CHANGELOG.md"

[project.scripts]
geodoctor = "geodoctor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/geodoctor"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "geopandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shapely.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyproj.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=geodoctor --cov-report=term-missing --cov-report=html --cov-report=lcov --cov-fail-under=70"
